--- a/public/less/style.less
+++ b/public/less/style.less
@@ -41,3 +41,16 @@
 	background: #36393D;
 	padding: 6px;
 }
+
+.bs-docs-social-buttons {
+	margin-left: 0;
+	margin-bottom: 0;
+	padding-left: 0;
+	list-style: none;
+	text-align: center;
+}
+
+ul, ol {
+	padding: 0;
+	margin: 0 0 10px 25px;
+}
