--- a/public/less/style.less
+++ b/public/less/style.less
@@ -54,3 +54,9 @@ ul, ol {
 	padding: 0;
 	margin: 0 0 10px 25px;
 }
+
+.bs-docs-social-buttons li {
+	display: inline-block;
+	padding: 5px 8px;
+	line-height: 1;
+}
